# rasteriser

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  readme.md
src/: affine.c  affine.h  main.c  matrix4.c  matrix4.h  projection.c  projection.h  rasteriser.c  rasteriser.h  ray.c  ray.h  triangle.c  triangle.h  vector4.c  vector4.h
tests/: CMakeLists.txt  test_vector4.c
tools/opengl-comparison/: a.out  build.sh  opengl.c
