cmake_minimum_required(VERSION 2.8)
#set(CMAKE_MODULE_PATH ${CHECK_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
project(rast)
#enable_testing()
include_directories(lib/geom/src)
add_executable(rast src/main.c)
TARGET_LINK_LIBRARIES(rast geom)
TARGET_LINK_LIBRARIES(rast SDL)
add_subdirectory(lib/geom)
