cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH ${CHECK_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
project(rast)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wno-long-long -pedantic")
add_definitions ("-Wall")
enable_testing()
#include_directories(lib/geom/src)

add_library(geom src/triangle.c src/vector4.c src/matrix4.c src/ray.c src/affine.c src/rasteriser.c)
add_executable(rast src/main.c)
TARGET_LINK_LIBRARIES(geom m)
TARGET_LINK_LIBRARIES(geom SDL_gfx)
TARGET_LINK_LIBRARIES(geom SDL)
TARGET_LINK_LIBRARIES(rast geom)
TARGET_LINK_LIBRARIES(rast SDL)
TARGET_LINK_LIBRARIES(rast SDL_gfx)
#add_subdirectory(lib/geom)
add_subdirectory(tests)
